# xlights-mcp-server

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.claude/: settings.json
scripts/: effect_showcase.py  effect_showcase_pinwheel.py  effect_showcase_snowflakes.py  feature_showcase_radial_wheel.py  gen_tools_reference.py
src/xlights_mcp/: config.py  server.py
src/xlights_mcp/audio/: analyzer.py  lyrics.py  separator.py  structure.py
src/xlights_mcp/sequencer/: engine.py
src/xlights_mcp/wiki/: manager.py
src/xlights_mcp/xlights/: automation_client.py  dialog_nav.py  palettes.py  screenshot.py  xsq_editor.py  xsq_reader.py  xsq_writer.py
tests/: test_beat_effect_sequence.py  test_screenshot.py  test_xsq_editor.py  test_xsq_reader.py
