[project]
name = "xlights-mcp-server"
version = "0.1.0"
description = "MCP server for generating xLights sequences from music analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pyloudnorm>=0.1.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "lxml>=5.0.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
screenshots = [
    "mss>=10.0.0",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "pywin32>=306",
]
separation = [
    "demucs>=4.0.0",
    "torch>=2.0.0",
]
beats = [
    "madmom>=0.16.1",
]
lyrics = [
    "openai-whisper>=20230918",
    "torch>=2.0.0",
]
all = [
    "xlights-mcp-server[separation,beats,lyrics,screenshots]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
xlights-mcp-server = "xlights_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xlights_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
